--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,8 @@ html {
 }
 
 body {
-  font-family:Verdana, Geneva, Tahoma, sans-serif
+  font-family:Verdana, Geneva, Tahoma, sans-serif;
+  margin: 100px;
 }
 
 h1 {
