--- a/style.css
+++ b/style.css
@@ -4,7 +4,8 @@ html {
 
 body {
   font-family:Verdana, Geneva, Tahoma, sans-serif;
-  margin: 30px;
+  margin-left:20px;
+  margin-right:20px
 }
 
 h1 {
